--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+.idea/
+logdir/
+Scanned/
+core/__pycahce__/
+ui/__pycahce__/
 *.py[cod]
 *$py.class
 
